added some responsivness

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Květinová síň Bromelia</title>
   <meta name="description" content="Květinová síň Bromelia v Křemži">
   <meta name="author" content="svarnyjunak">
+  <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
@@ -45,23 +46,54 @@
           <li>a jiná příležitostní vazba</li>
         </ul>
       </div>
-    </div>
 
-    <div class="clearfix">
-      <div id="map" class="info"></div>
+      <div id="opening-hours" class="info">
+        <h2>Otevírací doba</h2>
+        <table>
+          <tr>
+            <th>Pondělí</th>
+            <td>8:00-17:00</td>
+          </tr>
+          <tr>
+            <th>Úterý</th>
+            <td>8:00-17:00</td>
+          </tr>
+          <tr>
+            <th>Středa</th>
+            <td>8:00-17:00</td>
+          </tr>
+          <tr>
+            <th>Čtvrtek</th>
+            <td>8:00-17:00</td>
+          </tr>
+          <tr>
+            <th>Pátek</th>
+            <td>8:00-17:00</td>
+          </tr>
+          <tr>
+            <th>Sobota</th>
+            <td>8:00-11:00</td>
+          </tr>
+          <tr>
+            <th>Neděle</th>
+            <td>máme zavřeno</td>
+          </tr>
+        </table>
+      </div>
 
       <div id="contact" class="info">
         <h2>Kontakt</h2>
-        <h3>Adresa</h3>
-        <p>
+        <div>
           Květinová síň Bromelia
           <br> Jana Bartošová
           <br> Náměstí T.G.M. 7
           <br> Křemže 382 03
           <br> telefon 380 741 729 e-mail bromelia@centrum.cz
-        </p>
+        </div>
       </div>
     </div>
+    
+    <div id="map" class="info"></div>
   </div>
 
   <script src="http://api.mapy.cz/loader.js"></script>
