added better content

--- a/index.html
+++ b/index.html
@@ -21,34 +21,19 @@
   <div class="box">
     <h1 id="heading">Květinová síň Bromelia</h1>
 
+    <div id="we-offer" class="info">
+      <h2>Co pro vás můžeme udělat?</h2>
+      <p>Připravíme květinu pro vaši manželku, přítelkyni maminku, tchyni, nebo rozvernou kytici pro vašeho tátu. Pomůžeme vám
+        s výběrem rostliny v květináči a poradíme i s jejím pěstováním. Uvážeme vám svatební kytici a připravýme veškerou
+        květinovou výzdobu pro vaši svatbu.
+      </p>
+      <p>Máte zahradu? My zase máme stromky a keře, nemůže se vám některý hodit? Nebo si vyberte z naší nabídky zahradního nářadí,
+        semen. Máte doma zvířecího člena rodiny? Nabízíme krmivo pro psy, kočky, ptáčky a další zvířecí kamarády.</p>
+    </div>
+
     <div class="clearfix">
-      <div id="we-offer" class="info">
-        <h2>Nabízíme</h2>
-        <ul>
-          <li>Řezané květiny</li>
-          <li>Hrnkové květiny</li>
-          <li>Umělé květiny</li>
-          <li>Sušina</li>
-          <li>Ovocné a okrasné stromy a keře</li>
-          <li>Hnojiva, substráty</li>
-          <li>Postřiky proti chorobám a škůdcům</li>
-          <li>Květníky, obaly</li>
-        </ul>
-      </div>
-
-      <div id="arrangement" class="info">
-        <h2>Aranžování</h2>
-        <ul>
-          <li>Svatební</li>
-          <li>Smuteční</li>
-          <li>Vánoční</li>
-          <li>Velikonoční</li>
-          <li>a jiná příležitostní vazba</li>
-        </ul>
-      </div>
-
       <div id="opening-hours" class="info">
-        <h2>Otevírací doba</h2>
+        <h2>Kdy máme otevřeno?</h2>
         <table>
           <tr>
             <th>Pondělí</th>
@@ -76,23 +61,25 @@
           </tr>
           <tr>
             <th>Neděle</th>
-            <td>máme zavřeno</td>
+            <td>neděláme</td>
           </tr>
         </table>
       </div>
 
       <div id="contact" class="info">
-        <h2>Kontakt</h2>
         <div>
-          Květinová síň Bromelia
+          <address>
+          <strong>Květinová síň Bromelia</strong>
           <br> Jana Bartošová
           <br> Náměstí T.G.M. 7
           <br> Křemže 382 03
-          <br> telefon 380 741 729 e-mail bromelia@centrum.cz
+          </address>
+          <br> telefon 380 741 729
+          <br> e-mail bromelia@centrum.cz
         </div>
       </div>
     </div>
-    
+
     <div id="map" class="info"></div>
   </div>
 
