contacts section improved

--- a/index.html
+++ b/index.html
@@ -74,8 +74,27 @@
           <br> Náměstí T.G.M. 7
           <br> Křemže 382 03
           </address>
-          <br> telefon 380 741 729
-          <br> e-mail bromelia@centrum.cz
+          <br>
+
+          <table>
+            <tr>
+              <th>Telefon:</th>
+              <td><a href="tel:+420380741729">+420 380 741 729</a></td>
+            </tr>
+            <tr>
+              <th>E-mail:</th>
+              <td><a href="mailto:bromelia@centrum.cz">bromelia@centrum.cz</a></td>
+            </tr>
+            <tr>
+              <th>
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="15"
+                height="15" viewBox="0 0 512 512">
+                  <path d="M426.675 0h-341.351c-47.125 0-85.324 38.21-85.324 85.343v341.315c0 47.133 38.199 85.342 85.324 85.342h170.676v-224h-64v-64h64v-48c0-44.183 35.817-80 80-80h80v64h-80c-8.837 0-16 7.164-16 16v48h88l-16 64h-72v224h106.675c47.125 0 85.325-38.209 85.325-85.342v-341.315c0-47.133-38.2-85.343-85.325-85.343z"></path>
+                </svg>
+              </th>
+              <td><a href="https://www.facebook.com/Kv%C4%9Btinov%C3%A1-s%C3%AD%C5%88-Bromelia-350510808355955/">náš facebook</a></td>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
