just a test of telephone number in browsers

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <table>
             <tr>
               <th>Telefon:</th>
-              <td><a href="tel:+420380741729">+420 380 741 729</a></td>
+              <td><a href="tel:+420380741729">+420 380 741 729</a>+420 380 741 729</td>
             </tr>
             <tr>
               <th>E-mail:</th>
