grammer mistake repaired

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="we-offer" class="info">
       <h2>Co pro vás můžeme udělat?</h2>
       <p>Připravíme květinu pro vaši manželku, přítelkyni maminku, tchyni, nebo rozvernou kytici pro vašeho tátu. Pomůžeme vám
-        s výběrem rostliny v květináči a poradíme i s jejím pěstováním. Uvážeme vám svatební kytici a připravýme veškerou
+        s výběrem rostliny v květináči a poradíme i s jejím pěstováním. Uvážeme vám svatební kytici a připravíme veškerou
         květinovou výzdobu pro vaši svatbu.
       </p>
       <p>Máte zahradu? My zase máme stromky a keře, nemůže se vám některý hodit? Nebo si vyberte z naší nabídky zahradního nářadí,
