--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 
     <div id="we-offer" class="info">
       <h2>Co pro vás můžeme udělat?</h2>
-      <p>Připravíme květinu pro vaši manželku, přítelkyni maminku, tchyni, nebo rozvernou kytici pro vašeho tátu. Pomůžeme vám
-        s výběrem rostliny v květináči a poradíme i s jejím pěstováním. Uvážeme vám svatební kytici a připravíme veškerou
-        květinovou výzdobu pro vaši svatbu.
+      <p>Připravíme <strong>květinu pro vaši manželku</strong>, přítelkyni maminku, tchyni, nebo rozvernou kytici pro vašeho tátu. Pomůžeme vám
+        s výběrem rostliny v květináči a poradíme i s jejím pěstováním. Uvážeme vám <strong>svatební kytici</strong> a připravíme veškerou
+        <strong>květinovou výzdobu</strong> pro vaši svatbu a další veselé i smutné události.
       </p>
-      <p>Máte zahradu? My zase máme stromky a keře, nemůže se vám některý hodit? Nebo si vyberte z naší nabídky zahradního nářadí,
-        semen. Máte doma zvířecího člena rodiny? Nabízíme krmivo pro psy, kočky, ptáčky a další zvířecí kamarády.</p>
+      <p>Máte zahradu? My zase máme <strong>stromky a keře</strong>, nemůže se vám některý z nich hodit? Nebo si vyberte z naší nabídky zahradního nářadí, 
+         hnojiv, postřiků a semen. Máte doma zvířecího člena rodiny? Nabízíme <strong>krmivo pro psy, kočky, ptáčky</strong> a další zvířecí kamarády 
+         i zvířátka užitečná.</p>
     </div>
 
     <div class="clearfix">
