--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div id="we-offer" class="info">
       <h2>Co pro vás můžeme udělat?</h2>
-      <p>Připravíme <strong>květinu pro vaši manželku</strong>, přítelkyni maminku, tchyni, nebo rozvernou kytici pro vašeho tátu. Pomůžeme vám
+      <p>Připravíme <strong>květinu pro vaši manželku</strong>, přítelkyni, maminku, tchyni, nebo rozvernou kytici pro vašeho tátu. Pomůžeme vám
         s výběrem rostliny v květináči a poradíme i s jejím pěstováním. Uvážeme vám <strong>svatební kytici</strong> a připravíme veškerou
         <strong>květinovou výzdobu</strong> pro vaši svatbu a další veselé i smutné události.
       </p>
