roboto font fix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <meta name="theme-color" content="#24c12f">
 
   <link rel="stylesheet" href="css/styles.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
